# simplicy-crypto-service

./: .gitignore  Cargo.toml  README.md  Settings.development.toml  Settings.example.toml  servers.toml
benches/: bench.rs
src/: lib.rs  main.rs
src/config/: mod.rs
