[package]
name = "crypto_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
base64 = "0.21"
config = "0.13"
rand = "0.8"
rust-argon2 = "1.0"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.11"

[dev-dependencies]
# Bench
criterion = "0.4.0"
iai = "0.1" # criterion alternative

[[bench]]
name = "bench"
harness = false
